--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <img src="./assets/img/logo-gbs-home.png" alt="logo GBS">
         </div>
         <h3>gaming business school</h3>
-        <p>formez-vous dans la première école de management dédiée aux enjeux et métiers du jeuvidéo.</p>
+        <p>Formez-vous dans la première école de management dédiée aux enjeux et métiers du jeuvidéo.</p>
         <button>en savoir plus</button>
       </div>
       <div class="list-icon-part">
@@ -74,7 +74,7 @@
     </div>
     <div class="main-news">
       <div class="main-news-container">
-        <div>
+        <div class="news-content">
           <div class="mn-pic">
             <img src="./assets/img/ri8decembre.jpg" alt="réunion d'information">
           </div>
@@ -86,7 +86,7 @@
             <a href="#">Sur inscription <i class="fas fa-angle-right"></i></a>
           </div>
         </div>
-        <div>
+        <div class="news-content">
           <div class="mn-pic">
             <img src="./assets/img/pgw18home.jpg" alt="pgw 2018">
           </div>
@@ -97,7 +97,7 @@
             <a href="#">lire la suite <i class="fas fa-angle-right"></i></a>
           </div>
         </div>
-        <div>
+        <div class="news-content">
           <div class="mn-pic">
             <img src="./assets/img/inauguration_gaming_campus_photo.jpg" alt="inauguration GC Lyon">
           </div>
