Maquette Terminée, avec responsive.

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         </div>
   </section>
   <footer>
-    <h3>partenaires officiels</h3>
+    <h3>Partenaires officiels</h3>
     <ul>
       <li><img src="./assets/img/apollo.png" alt="apollo"></li>
       <li><img src="./assets/img/chiliz.png" alt="chiliz"></li>
